log
Wed 20 Mar 2024 09:46:08 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c36c39a
Wed 20 Mar 2024 09:48:52 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:28: error: expected ‘;’ before ‘}’ token
   50 |        pushFront(L,numeros)
      |                            ^
      |                            ;
......
   53 |      }
      |      ~                      
Compilation failed
c860e82
Wed 20 Mar 2024 09:49:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e95a13
Wed 20 Mar 2024 09:53:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7cb9574
Wed 20 Mar 2024 09:56:38 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|4
total_score: 10/70
3f5e856
